--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,40 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
+
+    h1, h2, h3, h4, h5 {
+        margin: 0;
+        padding: 10px 0;
+        font-weight: bold;
+    }
+
+    h1 {
+        font-size: 22px;
+    }
+
+    ul, li {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    ul, p {
+        margin: 0;
+        padding: 0 0 0 10px;
+    }
+
+    p {
+        text-align: justify;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .fa {
+        text-align: center;
+        width: 20px;
+    }
 }
