--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,5 @@
-<app-topcard class="page"></app-topcard>
-<app-skills class="page"></app-skills>
-<app-positions class="page"></app-positions>
-<app-projects class="page"></app-projects>
-<app-education class="page"></app-education>
+<app-topcard *ngIf="resume" [info]="resume.info" class="page"></app-topcard>
+<app-skills *ngIf="resume" class="page"></app-skills>
+<app-career *ngIf="resume" class="page"></app-career>
+<app-projects *ngIf="resume" class="page"></app-projects>
+<app-education *ngIf="resume" class="page"></app-education>
