--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -1,5 +1,11 @@
 :host {
     min-height: 200px;
+    background-color: #ff5555 !important;
+    color: white;
+    
+    a {
+        color: white;
+    }
 }
 
 #header {
@@ -12,7 +18,6 @@
 #profil {
     position: relative;
     top: -64px;
-    text-align: center;
 
     .photo {
         height: 128px;
@@ -23,22 +28,36 @@
         background-color: white;
         background-image: url('./../../../assets/images/dimitri.png');
         background-size: cover;
-        filter: drop-shadow(1px 1px 50px) blur(1px);
+        filter: drop-shadow(1px 1px 50px);
     }
 
     .informations {
         margin-top: 10px;
+        text-align: center;
 
         .name {
-            font-size: 22px;
+            margin: 0;
+            padding: 0;
         }
     
         .position {
-            opacity: 0.8;
+            opacity: 0.9;
         }
     
         .location {
-            opacity: 0.65;
+            opacity: 0.7;
         }
+    }
+}
+
+#about {
+    margin-top: 25px;
+}
+
+.container {
+    padding: 0 25px 25px 25px;
+
+    h1 {
+        padding: 0 0 10px 0;
     }
 }
