--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'variables.scss';
+
 html, body {
     width: 100%;
     height: 100%;
@@ -7,6 +8,7 @@ html, body {
     font-family: 'Lato', sans-serif;
 
     h1, h2, h3, h4, h5 {
+        color: $red;
         margin: 0;
         padding: 10px 0;
         font-weight: bold;
