--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,6 @@
-<app-topcard    *ngIf="resume" [info]="resume.info"             class="page"></app-topcard>
+<app-topcard    *ngIf="resume" [info]="resume.info"             class="top"></app-topcard>
 <app-skills     *ngIf="resume" [abilities]="resume.abilities"   class="page"></app-skills>
 <app-career     *ngIf="resume" [career]="resume.career"         class="page"></app-career>
 <app-projects   *ngIf="resume" [projects]="resume.projects"     class="page"></app-projects>
 <app-education  *ngIf="resume" [education]="resume.education"   class="page"></app-education>
+<app-languages  *ngIf="resume" [languages]="resume.languages"   class="page"></app-languages>
