--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -1,10 +1,18 @@
+@import '../../variables.scss';
+
 :host {
     display: flex;
     flex-direction: column;
     filter: drop-shadow(1px 1px 100px);
 }
 
+.top {
+    background-color: $red;
+    margin: 20px 0;
+}
+
 .page {
     background-color: whitesmoke;
     margin: 20px 0;
+    padding: 25px;
 }
