--- a/src/app/resume/topcard/topcard.component.html
+++ b/src/app/resume/topcard/topcard.component.html
@@ -7,13 +7,13 @@
 
     <div class="informations">
         <h1 class="name">{{ info.name }}</h1>
-        <div class="position">{{ info.job }} at {{ info.company }}</div>
+        <div class="position">{{ info.job }}, {{ info.company }}</div>
         <div class="location">{{ info.location }}</div>
     </div>
 </div>
 
 <div id="contact" class="container" >
-    <h1>Me contacter</h1>
+    <h2>Me contacter</h2>
     <ul>
         <li>
             <span class="fa fa-map-marker"></span>
@@ -35,6 +35,6 @@
 </div>
 
 <div id="about" class="container">
-    <h1>À propos de moi</h1>
+    <h2>À propos de moi</h2>
     <p>{{ info.about }}</p>
 </div>
