--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -12,7 +12,7 @@
 }
 
 .page {
-    background-color: whitesmoke;
+    background-color: white;
     margin: 20px 0;
-    padding: 25px;
+    padding: 50px;
 }
