--- a/src/app/resume/topcard/topcard.component.html
+++ b/src/app/resume/topcard/topcard.component.html
@@ -38,3 +38,7 @@
     <h2>À propos de moi</h2>
     <p>{{ info.about }}</p>
 </div>
+
+<!-- <div id="download" class="container">
+    <button></button>
+</div> -->
