--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -64,9 +64,13 @@
 }
 
 .container {
-    padding: 0 25px 25px 25px;
+    padding: 25px 50px;
 
     h1, h2 {
         padding: 0 0 10px 0;
     }
+}
+
+.container:last-child {
+    padding-bottom: 50px;
 }
