--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ html, body {
         color: $red;
         margin: 0;
         padding: 10px 0;
+        margin: -10px;
         font-weight: normal;
     }
 
@@ -22,6 +23,10 @@ html, body {
         font-size: 22px;
     }
 
+    h3 {
+        font-size: 18.5px;
+    }
+
     ul, li {
         list-style: none;
         margin: 0;
@@ -30,7 +35,7 @@ html, body {
 
     ul, p {
         margin: 0;
-        padding: 0 0 0 10px;
+        padding: 0;
     }
 
     p {
