--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,18 @@
-:host:before {
-    content: "";
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.root {
+    display: block;
     background: url('./../assets/images/stardust.png');
-    z-index: -1;
 }
+
+// :host:before {
+//     content: "";
+//     position: fixed;
+//     width: 100%;
+//     height: 100%;
+//     margin: 0;
+//     padding: 0;
+//     background: url('./../assets/images/stardust.png');
+//     z-index: -1;
+// }
 
 app-resume {
     margin: auto;
