--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -3,16 +3,22 @@
 :host {
     display: flex;
     flex-direction: column;
-    filter: drop-shadow(1px 1px 100px);
 }
 
 .top {
     background-color: $red;
     margin: 20px 0;
+    transition-duration: 200ms;
+    filter: drop-shadow(0 0 100px black);
 }
 
 .page {
     background-color: white;
     margin: 20px 0;
     padding: 50px;
+    transition-duration: 200ms;
+}
+
+.top:hover, .page:hover {
+    box-shadow: 0 0 10px black;
 }
