--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,10 +1,10 @@
 <div class="container" [ngClass]="{'noLogo': presentation.logo == null}">
     <div class="title">
-        <img *ngIf="presentation.logo" class="logo" [src]="'./../../assets/logos/' + presentation.logo" (error)="removeLogo()"/>
+        <img *ngIf="presentation.logo" class="logo" [src]="'./../../assets/logos/' + presentation.logo"/>
         <app-label [title]="presentation.title" [subtitle]="presentation.subtitle"></app-label>
     </div>
     <div class="tags">
-        <div *ngIf="presentation.date" class="date">{{ presentation.date }}</div>
+        <div *ngIf="presentation.date" class="tag date">{{ presentation.date }}</div>
     </div>
 </div>
 
