--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -25,6 +25,10 @@
         
         app-label {
             margin-left: 10px;
+
+            .subtitle {
+                white-space: nowrap!important;
+            }
         }
     }
 
@@ -32,7 +36,7 @@
         display: inline-flex;
         overflow: hidden;
 
-        div {
+        .tag {
             margin-left: 5px;
             padding: 4px;
             border-radius: 3px;
@@ -40,6 +44,11 @@
             font-size: 16px;
             color: white;
             white-space: nowrap;
+            transition-duration: 200ms;
+        }
+
+        .tag:hover {
+            opacity: 0.7;
         }
 
         .date {
