--- a/src/app/resume/career/career.component.html
+++ b/src/app/resume/career/career.component.html
@@ -1,2 +1,2 @@
-<h1>Expériences</h1>
+<h1>Expérience professionnelle</h1>
 <app-presentation *ngFor="let job of jobs" [presentation]="getPresentation(job)"></app-presentation>
