--- a/src/app/resume/education/education.component.html
+++ b/src/app/resume/education/education.component.html
@@ -1,1 +1,2 @@
 <h1>Formation</h1>
+<app-presentation *ngFor="let formation of education" [presentation]="getPresentation(formation)"></app-presentation>
