--- a/src/app/resume/projects/projects.component.html
+++ b/src/app/resume/projects/projects.component.html
@@ -1,1 +1,2 @@
 <h1>Réalisations</h1>
+<app-presentation *ngFor="let project of projects" [presentation]="getPresentation(project)"></app-presentation>
