--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+    font-size: 14px;
 
     h1, h2, h3, h4, h5 {
         color: $red;
@@ -55,5 +56,10 @@ html, body {
     .fa {
         text-align: center;
         width: 20px;
+    }
+
+    img {
+        object-fit: cover;
+        object-position: center;
     }
 }
