--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div #root class="root" (mousemove)="moveBackground($event)">
-    <app-resume></app-resume>
+    <div #container class="container">
+        <app-resume></app-resume>
+    </div>
 </div>
