--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,11 @@
     background: url('./../assets/images/stardust.png');
 }
 
+.container {
+    display: block;
+    background: url('./../assets/images/particules.png');
+}
+
 // :host:before {
 //     content: "";
 //     position: fixed;
