--- a/src/app/resume/languages/languages.component.scss
+++ b/src/app/resume/languages/languages.component.scss
@@ -1,3 +1,9 @@
+:host:hover {
+    .flags .flag img {
+        filter: none;
+    }
+}
+
 .flags {
     display: flex;
     margin: 10px 0 0 0;
@@ -13,11 +19,7 @@
             height: 30px;
             margin: 5px 0 0 0;
             transition-duration: 200ms;
-            filter: grayscale(1);
-        }
-
-        img:hover {
-            filter: none;
+            filter: grayscale(.5);
         }
 
         .lang {
