--- a/src/app/shared/presentation/presentation.component.scss
+++ b/src/app/shared/presentation/presentation.component.scss
@@ -57,8 +57,9 @@
     }
 }
 
-.noLogo {
+.container.noLogo {
     margin-left: 13px;
+    height: auto;
 }
 
 .detail {
@@ -76,4 +77,8 @@
         padding: 5px;
         margin-left: 20px;
     }
+}
+
+app-link {
+    margin-left: 20px;
 }
