--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -8,6 +8,10 @@
     h1, h2, a {
         color: white;
     }
+
+    .container {
+        background-image: url('./../../../assets/images/particules.png');
+    }
 }
 
 #header {
@@ -29,7 +33,7 @@
         border: 3px solid white;
         border-radius: 100%;
         background-color: white;
-        background-image: url('./../../../assets/images/dimitri.png');
+        background-image: url('./../../../assets/images/me.png');
         background-size: cover;
         transition-duration: 2s;
     }
@@ -54,18 +58,19 @@
     }
 }
 
+
 #about {
     margin-top: 25px;
 }
 
-.container {
-    padding: 25px 50px;
+.section {
+    padding: 10px 50px;
 
     h1, h2 {
         padding: 0 0 10px 0;
     }
 }
 
-.container:last-child {
+.section:last-child {
     padding-bottom: 50px;
 }
