--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,10 @@ html, body {
         padding: 0;
     }
 
+    li {
+        white-space: nowrap;
+    }
+
     ul, p {
         margin: 0;
         padding: 0;
