--- a/src/app/resume/topcard/topcard.component.html
+++ b/src/app/resume/topcard/topcard.component.html
@@ -1,44 +1,44 @@
 <div id="header"></div>
 
-<div id="profil" *ngIf="info">
-    <div class="photoContainer">
-        <div class="photo"></div>
+<div class="container">
+    <div id="profil" *ngIf="info">
+        <div class="photoContainer">
+            <div class="photo"></div>
+        </div>
+
+        <div class="informations">
+            <h1 class="name">{{ info.name }}</h1>
+            <div class="position">{{ info.job }}, {{ info.company }}</div>
+            <div class="location">{{ info.location }}</div>
+        </div>
     </div>
 
-    <div class="informations">
-        <h1 class="name">{{ info.name }}</h1>
-        <div class="position">{{ info.job }}, {{ info.company }}</div>
-        <div class="location">{{ info.location }}</div>
+    <div class="sections">
+        <div id="contact" class="section" >
+            <h2>Me contacter</h2>
+            <ul>
+                <li>
+                    <span class="fa fa-map-marker"></span>
+                    {{ info.location }}
+                </li>
+                <li>
+                    <span class="fa fa-envelope-o"></span>
+                    <a href="mailto:{{ info.email }}" target="_blank">{{ info.email }}</a>
+                </li>
+                <li>
+                    <span class="fa fa-linkedin-square"></span>
+                    <a href="https://www.{{ info.linkedin }}" target="_blank">{{ info.linkedin }}</a>
+                </li>
+                <li>
+                    <span class="fa fa-github"></span>
+                    <a href="https://{{ info.github }}" target="_blank">{{ info.github }}</a>
+                </li>
+            </ul>
+        </div>
+            
+        <div id="about" class="section">
+            <h2>À propos de moi</h2>
+            <p>{{ info.about }}</p>
+        </div>
     </div>
 </div>
-
-<div id="contact" class="container" >
-    <h2>Me contacter</h2>
-    <ul>
-        <li>
-            <span class="fa fa-map-marker"></span>
-            {{ info.location }}
-        </li>
-        <li>
-            <span class="fa fa-envelope-o"></span>
-            <a href="mailto:{{ info.email }}" target="_blank">{{ info.email }}</a>
-        </li>
-        <li>
-            <span class="fa fa-linkedin-square"></span>
-            <a href="https://www.{{ info.linkedin }}" target="_blank">{{ info.linkedin }}</a>
-        </li>
-        <li>
-            <span class="fa fa-github"></span>
-            <a href="https://{{ info.github }}" target="_blank">{{ info.github }}</a>
-        </li>
-    </ul>
-</div>
-
-<div id="about" class="container">
-    <h2>À propos de moi</h2>
-    <p>{{ info.about }}</p>
-</div>
-
-<!-- <div id="download" class="container">
-    <button></button>
-</div> -->
