--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,13 @@
 @import 'variables.scss';
 
 html, body {
-    width: 100%;
+    min-width: 800px;
     height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
+    background: $dark;
 
     h1, h2, h3, h4, h5 {
         color: $red;
