--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -64,10 +64,10 @@
 }
 
 .section {
-    padding: 10px 50px;
+    padding: 10px 50px 30px;
 
     h1, h2 {
-        padding: 0 0 10px 0;
+        padding: 0 0 20px 0;
     }
 }
 
