--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,5 @@
-<app-topcard #topcard *ngIf="resume" [info]="resume.info" class="top"></app-topcard>
+<app-topcard #topcard *ngIf="resume" [info]="resume.info"></app-topcard>
+
 <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
 <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
 <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
