fix mail feature opening in new tab

--- a/src/app/resume/topcard/topcard.component.html
+++ b/src/app/resume/topcard/topcard.component.html
@@ -23,7 +23,7 @@
                 </li>
                 <li>
                     <span class="fa fa-envelope-o"></span>
-                    <a href="mailto:{{ info.email }}" target="_blank">{{ info.email }}</a>
+                    <a href="mailto:{{ info.email }}">{{ info.email }}</a>
                 </li>
                 <li>
                     <span class="fa fa-linkedin-square"></span>
