reduce stars in app-rating

--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -18,7 +18,7 @@
     height: 128px;
     background-color: black;
     background-image: url('./../../../assets/images/header.png');
-    background-size: cover
+    background-size: cover;
 }
 
 #profil {
