--- a/src/app/shared/presentation/presentation.component.html
+++ b/src/app/shared/presentation/presentation.component.html
@@ -4,15 +4,15 @@
         <app-label [title]="presentation.title" [subtitle]="presentation.subtitle"></app-label>
     </div>
     <div class="tags">
-        <div *ngIf="presentation.date" class="tag date">{{ presentation.date }}</div>
         <div *ngFor="let tag of presentation.tags" class="tag">{{ tag }}</div>
+        <div *ngIf="presentation.date" class="tag date">{{ presentation.date }}</div>
     </div>
 </div>
 
 <div *ngIf="presentation.detail" class="detail">{{ presentation.detail }}</div>
 
 <div *ngIf="presentation.description" class="description">
-    <p *ngFor="let paragraphe of presentation.description">{{ paragraphe }}</p>
+    <p *ngFor="let paragraphe of presentation.description" [innerHTML]="paragraphe"></p>
 </div>
 
 <div *ngIf="presentation.links" class="links">
