--- a/src/app/resume/languages/languages.component.html
+++ b/src/app/resume/languages/languages.component.html
@@ -3,7 +3,7 @@
 <div class="flags">
     <div *ngFor="let lang of languages">
         <div class="flag">
-            <img [src]="'../../../assets/flags/' + lang.flag"/>
+            <img [src]="'./assets/flags/' + lang.flag"/>
             <span class="lang">{{ lang.lang }}</span>
         </div>
         <div class="level">
