--- a/src/app/shared/presentation/presentation.component.html
+++ b/src/app/shared/presentation/presentation.component.html
@@ -1,6 +1,8 @@
 <div class="container" [ngClass]="{'noLogo': presentation.logo == null}">
     <div class="title">
-        <img *ngIf="presentation.logo" class="logo" [src]="'./../../assets/logos/' + presentation.logo"/>
+        <div class="logo">
+            <img *ngIf="presentation.logo" [src]="'./assets/logos/' + presentation.logo"/>
+        </div>
         <app-label [title]="presentation.title" [subtitle]="presentation.subtitle"></app-label>
     </div>
     <div class="tags">
