--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -15,8 +15,7 @@
 
     .header {
         height: 128px;
-        background-image: url('./../../../assets/images/header.jpg');
-        background-size: cover;
+        background-image: url('./../../../assets/images/header.png');
     }
 }
 
