--- a/src/app/shared/rating/rating.component.html
+++ b/src/app/shared/rating/rating.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="stars">
+<div *ngIf="stars" class="ratingContainer">
   <app-label [title]="skill.techno" [subtitle]="skill.detail"></app-label>
   <div class="rating">
     <span *ngFor="let star of stars" class="star" [ngClass]="{'full': star}"></span>
