--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,7 +62,8 @@ html, body {
 
     .fa {
         text-align: center;
-        width: 20px;
+        width: 25px;
+        margin-left: -5px;
     }
 
     img {
