--- a/src/app/resume/pdf-template/pdf-template.component.html
+++ b/src/app/resume/pdf-template/pdf-template.component.html
@@ -1,7 +1,10 @@
 <app-topcard *ngIf="resume" [info]="resume.info"></app-topcard>
-<app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
 
-<!-- <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career> -->
+<div id="pages">
+    <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
+    <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
+</div>
+
 <!-- <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects> -->
 <!-- <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education> -->
 <!-- <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages> -->
