--- a/src/app/resume/pdf-template/pdf-template.component.html
+++ b/src/app/resume/pdf-template/pdf-template.component.html
@@ -1,10 +1,21 @@
-<app-topcard *ngIf="resume" [info]="resume.info"></app-topcard>
+<kendo-pdf-export #pdf paperSize="a4">
+    <div class="pdfPage">
+        <ng-template #template kendoPDFTemplate let-pageNum="pageNum" let-totalPages="totalPages">
+            <app-topcard *ngIf="resume" [info]="resume.info"></app-topcard>
+            <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages>
+        </ng-template>
+        
+        <ng-container *ngTemplateOutlet="template"></ng-container>
+        
+        <div class="pdfPageElements">
+            <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
+            <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
+            <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education>
+            <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
+        </div>
+    </div>
+</kendo-pdf-export>
 
-<div id="pages">
-    <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
-    <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
-</div>
-
-<!-- <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects> -->
-<!-- <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education> -->
-<!-- <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages> -->
+<button style="position:absolute; left:0" kendo-button (click)="pdf.saveAs('invoice.pdf')">
+    Save As PDF
+</button>
