--- a/src/app/resume/pdf-template/pdf-template.component.html
+++ b/src/app/resume/pdf-template/pdf-template.component.html
@@ -5,17 +5,11 @@
             <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages>
         </ng-template>
         
-        <ng-container *ngTemplateOutlet="template"></ng-container>
-        
         <div class="pdfPageElements">
             <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
             <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
             <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education>
-            <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
+            <!-- <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects> -->
         </div>
     </div>
 </kendo-pdf-export>
-
-<button style="position:absolute; left:0" kendo-button (click)="pdf.saveAs('invoice.pdf')">
-    Save As PDF
-</button>
