--- a/src/app/resume/pdf-template/styles/pdf.topcard.scss
+++ b/src/app/resume/pdf-template/styles/pdf.topcard.scss
@@ -10,8 +10,13 @@ app-topcard {
 
     /deep/ {
         #profil {
+            // top: -100px !important;
+            
             .photo {
                 background-image: url('./../../../assets/images/me.grey.png') !important;
+                // width: 90px !important;
+                // height: 90px !important;
+                // border: 2px solid white !important;
             }
     
             .photo:hover {
@@ -37,6 +42,10 @@ app-topcard {
 
                 #about {
                     margin-top: 55px;
+                }
+
+                .buttons, .buttons * {
+                    display: none;
                 }
             }
         }
