--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,8 +1,8 @@
-<app-topcard #topcard *ngIf="resume" [info]="resume.info"></app-topcard>
+<app-topcard #topcard (downloadPDF)="download()" *ngIf="resume" [info]="resume.info"></app-topcard>
 
 <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
 <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
-<app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
+<!-- <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects> -->
 <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education>
 <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages>
 <!-- <app-hobbies *ngIf="resume" class="page"></app-hobbies> -->
