--- a/src/app/resume/topcard/topcard.component.html
+++ b/src/app/resume/topcard/topcard.component.html
@@ -40,5 +40,9 @@
             <h2>À propos de moi</h2>
             <p>{{ info.about }}</p>
         </div>
+
+        <div class="section buttons">
+            <button (click)="download()">CV au format PDF</button>
+        </div>
     </div>
 </div>
