--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -66,8 +66,34 @@
     h1, h2 {
         padding: 0 0 20px 0;
     }
+
+
 }
 
 .section:last-child {
     padding-bottom: 50px;
+}
+
+.buttons {
+    text-align: center;
+
+    button {
+        border: none;
+        padding: 5px 25px;
+        border-radius: 3px;
+        color: white;
+        background: $dark;
+        box-shadow: 0 0 1px black;
+        font-size: 14px;
+        cursor: pointer;
+        transition-duration: 200ms;
+    }
+
+    button:hover {
+        box-shadow: 0 0 7px black;
+    }
+
+    button:focus {
+        outline: none;
+    }
 }
