hide github icon in pdf before finding a better solution

--- a/src/app/resume/pdf-template/styles/pdf.projects.scss
+++ b/src/app/resume/pdf-template/styles/pdf.projects.scss
@@ -1,4 +1,12 @@
 app-projects {
     display: block;
     margin-top: 10px;
+
+    /deep/ {
+        app-link /deep/ {
+            a:before {
+                content: none !important;
+            }
+        }
+    }
 }
