--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -2,7 +2,7 @@
 
 <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
 <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
-<!-- <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects> -->
+<app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
 <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education>
 <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages>
 <!-- <app-hobbies *ngIf="resume" class="page"></app-hobbies> -->
