--- a/src/app/resume/pdf-template/pdf-template.component.html
+++ b/src/app/resume/pdf-template/pdf-template.component.html
@@ -11,7 +11,7 @@
             <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
             <app-career *ngIf="resume" [jobs]="resume.career" class="page"></app-career>
             <app-education *ngIf="resume" [education]="resume.education" class="page"></app-education>
-            <!-- <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects> -->
+            <app-projects *ngIf="resume" [projects]="resume.projects" class="page"></app-projects>
         </div>
     </div>
 </kendo-pdf-export>
