--- a/src/app/shared/link/link.component.scss
+++ b/src/app/shared/link/link.component.scss
@@ -38,7 +38,7 @@ a:before {
 }
 
 a.github:before {
-    background: url("./../../../assets/icons/github.svg") center center / contain no-repeat;
+    background: url("./../../../assets/icons/github.png") center center / contain no-repeat;
 }
 
 a.npm:before {
