--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -6,7 +6,7 @@
 }
 
 app-topcard {
-    background-color: $red;
+    background-color: $main;
     margin: 20px 0;
     transition-duration: 200ms;
 }
