--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -2,7 +2,7 @@
 
 :host {
     min-height: 200px;
-    background-color: $red;
+    background-color: $main;
     color: white;
     
     h1, h2, a {
