--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ html, body {
     background: $dark;
 
     h1, h2, h3, h4, h5 {
-        color: $red;
+        color: $main;
         margin: 0;
         padding: 10px 0;
         margin: -10px;
