--- a/src/variables.scss
+++ b/src/variables.scss
@@ -15,6 +15,6 @@ $mobile-media: "(max-width: #{$desktop-width}) and (max-height: #{$desktop-heigh
     }
 }
 
-$red: #ff5555;
+$main: #ff5555;
 $dark: #2C2B2F;
 $light: #e8e8e8;
