--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -15,7 +15,7 @@
 
     .header {
         height: 128px;
-        background-image: url('./../../../assets/images/header.png');
+        background-image: url('./../../../assets/images/pink_dust.png');
     }
 }
 
