--- a/src/app/shared/presentation/presentation.component.scss
+++ b/src/app/shared/presentation/presentation.component.scss
@@ -61,7 +61,7 @@
         }
 
         .date {
-            background-color: steelblue;
+            background-color: $second;
         }
     }
 }
