--- a/src/variables.scss
+++ b/src/variables.scss
@@ -15,6 +15,9 @@ $mobile-media: "(max-width: #{$desktop-width}) and (max-height: #{$desktop-heigh
     }
 }
 
-$main: #ff5555;
+$main: #415065;
+$second: #e8ae30;
+$third: #ff5555;
+$fourth: #ab4141;
 $dark: #2C2B2F;
 $light: #e8e8e8;
