--- a/src/variables.scss
+++ b/src/variables.scss
@@ -15,9 +15,17 @@ $mobile-media: "(max-width: #{$desktop-width}) and (max-height: #{$desktop-heigh
     }
 }
 
-$main: #415065;
-$second: #e8ae30;
-$third: #ff5555;
-$fourth: #ab4141;
+// $main: #415065;
+// $second: #e8ae30;
+
+// $main: #ab4141;
+// $second: #415065;
+
+// $main: #ff5555;
+// $second: steelblue;
+
+$second: #71C6CD;
+$main: #283036;
+
 $dark: #2C2B2F;
 $light: #e8e8e8;
