--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -10,12 +10,13 @@
     }
 
     .container {
-        background-image: url('./../../../assets/images/particules.png');
+        // background-image: url('./../../../assets/images/particules.png');
     }
 
     .header {
         height: 128px;
-        background-image: url('./../../../assets/images/pink_dust.png');
+        // background-image: url('./../../../assets/images/pink_dust.png');
+        background-color: $second;
     }
 }
 
@@ -76,24 +77,4 @@
 
 .buttons {
     text-align: center;
-
-    button {
-        border: none;
-        padding: 5px 25px;
-        border-radius: 3px;
-        color: white;
-        background: $dark;
-        box-shadow: 0 0 1px black;
-        font-size: 14px;
-        cursor: pointer;
-        transition-duration: 200ms;
-    }
-
-    button:hover {
-        box-shadow: 0 0 7px black;
-    }
-
-    button:focus {
-        outline: none;
-    }
 }
