--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -22,6 +22,12 @@ app-topcard:hover, .page:hover {
     box-shadow: 0 0 10px black;
 }
 
+app-pdf-template {
+    position: absolute;
+    left: -1000%;
+    z-index: -1000;
+}
+
 @include desktop {
     :host {
         position: relative;
