--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import './../variables.scss';
+
 .root {
     display: block;
     background: url('./../assets/images/stardust.png');
@@ -13,8 +15,8 @@ app-resume {
     width: 700px;
 }
 
-app-pdf-template {
-    position: absolute;
-    left: -1000%;
-    z-index: -1000;
+#copyright {
+    color: $dark;
+    opacity: 0.5;
+    text-align: right;
 }
