--- a/src/app/resume/pdf-template/pdf-template.component.html
+++ b/src/app/resume/pdf-template/pdf-template.component.html
@@ -5,7 +5,7 @@
             <app-languages *ngIf="resume" [languages]="resume.languages" class="page"></app-languages>
         </ng-template>
         
-        <!-- <ng-container *ngTemplateOutlet="template"></ng-container> -->
+        <ng-container *ngTemplateOutlet="template"></ng-container>
 
         <div class="pdfPageElements">
             <app-skills *ngIf="resume" [abilities]="resume.abilities" class="page"></app-skills>
