--- a/src/app/resume/topcard/topcard.component.scss
+++ b/src/app/resume/topcard/topcard.component.scss
@@ -34,6 +34,7 @@
         background-color: white;
         background-image: url('./../../../assets/images/me.png');
         background-size: cover;
+        background-color: $third;
         transition-duration: 2s;
     }
 
