remove old backgrounds

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div #root class="root" (mousemove)="moveBackground($event)">
-    <div #container class="container">
-        <app-resume></app-resume>
-    </div>
+<div class="container">
+    <app-resume></app-resume>
     <div id="copyright">© Copyright - Dimitri Buhon</div>
 </div>
 <app-particles></app-particles>
